--- a/rwb/classHyo/test2/index.html
+++ b/rwb/classHyo/test2/index.html
@@ -7,46 +7,139 @@
     <title>Document</title>
 </head>
 <style>
-    html,body {
-        margin: 0;
-        padding: 0;
-    }
-    .bg {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        background-color: snow;
-    }
-    .face {
-        position: absolute;
-        background:url('https://i.ibb.co/FVRrb0p/JuAug34.jpg') no-repeat 0 0;
-        width: 10%;
-        height: 16%;
-        animation-name: walk;
-			animation-duration: 1s;
-			animation-iteration-count: infinite;
-			animation-timing-function: steps(4);
-    }
+    * { box-sizing: border-box }
+    #result { width: 180px; height: 50px; margin: 5px; text-align: right }
+    #operator { width: 50px; height: 50px; margin: 5px; text-align: center }
+    button { width: 50px; height: 50px; margin: 5px }
+  </style>
 
-    @keyframes walk {
-    0%{
-        background-position: 0 0;
-    }        
-    100%{
-        background-position: -1472px 0;
-    }     
-    }
-    @keyframes street{
-        0%{
-        background-position: 0 0;
-    }        
-    100%{
-        background-position: -1472px 0;
-    }     
-    }
-</style>
+    <!--계산기버튼구현-->
 <body>
-    <div class="bg"></div>
-    <div class="face"></div>
+    <input readonly id="operator">
+    <input readonly type="number" id="result">
+    <div class="row">
+      <button id="num-7">7</button>
+      <button id="num-8">8</button>
+      <button id="num-9">9</button>
+      <button id="plus">+</button>
+    </div>
+    <div class="row">
+      <button id="num-4">4</button>
+      <button id="num-5">5</button>
+      <button id="num-6">6</button>
+      <button id="minus">-</button>
+    </div>
+    <div class="row">
+      <button id="num-1">1</button>
+      <button id="num-2">2</button>
+      <button id="num-3">3</button>
+      <button id="divide">/</button>
+    </div>
+    <div class="row">
+      <button id="clear">C</button>
+      <button id="num-0">0</button>
+      <button id="calculate">=</button>
+      <button id="multiply">x</button>
+    </div>
+  <script>
+    let numOne = '';
+    let operator = '';
+    let numTwo = '';
+    const $operator = document.querySelector('#operator');
+    const $result = document.querySelector('#result');
+    // document.querySelector('#num-0').addEventListener('click', () => {});
+    // document.querySelector('#num-1').addEventListener('click', () => {});
+    // document.querySelector('#num-2').addEventListener('click', () => {});
+    // document.querySelector('#num-3').addEventListener('click', () => {});
+    // document.querySelector('#num-4').addEventListener('click', () => {});
+    // document.querySelector('#num-5').addEventListener('click', () => {});
+    // document.querySelector('#num-6').addEventListener('click', () => {});
+    // document.querySelector('#num-7').addEventListener('click', () => {});
+    // document.querySelector('#num-8').addEventListener('click', () => {});
+    // document.querySelector('#num-9').addEventListener('click', () => {});
+    // document.querySelector('#plus').addEventListener('click', () => {});
+    // document.querySelector('#minus').addEventListener('click', () => {});
+    // document.querySelector('#divide').addEventListener('click', () => {});
+    // document.querySelector('#multiply').addEventListener('click', () => {});
+    // document.querySelector('#calculate').addEventListener('click', () => {});
+    // document.querySelector('#clear').addEventListener('click', () => {});
+
+    // document.querySelector('#num-0').addEventListener('click', () => {
+    //     if (operator) {
+    //         numTwo += '0';
+    //     } else {
+    //         numOne += '0';
+    //     }
+    //     $result.value += '0';
+    // });
+    //     document.querySelector('#num-1').addEventListener('click', () => {
+    //     if (operator) {
+    //         numTwo += '1';
+    //     } else {
+    //         numOne += '1';
+    //     }
+    //     $result.value += '1';
+    // });
+
+    const onClickNumber = (event) => {
+        // if (operator) {
+        // numTwo += event.target.textContent;
+        // } else {
+        // numOne += event.target.textContent;
+        // }
+        // $result.value += event.target.textContent;
+
+//         if (operator) {
+//     if (!numTwo) {
+//       $result.value = '';
+//     }
+//     numTwo += event.target.textContent;
+//     $result.value += event.target.textContent;
+//   } else {
+//     numOne += event.target.textContent;
+//     $result.value += event.target.textContent;
+//   }
+    const onClickNumber = (event) => {
+    if (!operator) {
+        numOne += event.target.textContent;
+        $result.value += event.target.textContent;
+        return;
+    }
+    // 이 아래로는 operator가 존재하는 경우에만 실행됨
+    if (!numTwo) {
+        $result.value = '';
+    }
+    numTwo += event.target.textContent;
+    $result.value += event.target.textContent;
+    };
+
+    };
+    document.querySelector('#num-0').addEventListener('click', onClickNumber);
+    document.querySelector('#num-1').addEventListener('click', onClickNumber);
+    document.querySelector('#num-2').addEventListener('click', onClickNumber);
+    document.querySelector('#num-3').addEventListener('click', onClickNumber);
+    document.querySelector('#num-4').addEventListener('click', onClickNumber);
+    document.querySelector('#num-5').addEventListener('click', onClickNumber);
+    document.querySelector('#num-6').addEventListener('click', onClickNumber);
+    document.querySelector('#num-7').addEventListener('click', onClickNumber);
+    document.querySelector('#num-8').addEventListener('click', onClickNumber);
+    document.querySelector('#num-9').addEventListener('click', onClickNumber);
+
+    const onClickOperator = (op) => () => {
+        if (numOne) {
+        operator = op;
+        $operator.value = op;
+        } else {
+        alert("숫자를 먼저 입력하세요.");
+        }
+    };
+    document.querySelector('#plus').addEventListener('click', onClickOperator('+'));
+    document.querySelector('#minus').addEventListener('click', onClickOperator('-'));
+    document.querySelector('#divide').addEventListener('click', onClickOperator('/'));
+    document.querySelector('#multiply').addEventListener('click', onClickOperator('*'));
+    document.querySelector('#calculate').addEventListener('click', () => {});
+    document.querySelector('#clear').addEventListener('click', () => {});
+  </script>
 </body>
+
 </html>
