--- a/rwb/classHyo/test2/index.html
+++ b/rwb/classHyo/test2/index.html
@@ -4,142 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <title>Calculator</title>
 </head>
-<style>
-    * { box-sizing: border-box }
-    #result { width: 180px; height: 50px; margin: 5px; text-align: right }
-    #operator { width: 50px; height: 50px; margin: 5px; text-align: center }
-    button { width: 50px; height: 50px; margin: 5px }
-  </style>
-
-    <!--계산기버튼구현-->
 <body>
-    <input readonly id="operator">
-    <input readonly type="number" id="result">
-    <div class="row">
-      <button id="num-7">7</button>
-      <button id="num-8">8</button>
-      <button id="num-9">9</button>
-      <button id="plus">+</button>
+    <div class="cantainer" >
+        <div class="calculator">
+            <div class="resultWerp">
+                <input typ="number" type="text"  id="numberDisplay">
+                <input typ="number" type="number"  id="result">
+            </div>
+            <div class="buttonWerp">
+                <button class="btn" onclick="addOutput('9')" type="button">9</button>
+                <button class="btn" onclick="addOutput('8')" type="button">8</button>
+                <button class="btn" onclick="addOutput('7')" type="button">7</button>
+                <button class="btn" onclick="reset()" type="button">C</button>
+                <button class="btn" onclick="del()" type="button">DEL</button>
+            </div>
+            <div class="buttonWerp">
+                <button class="btn" onclick="addOutput('6')" type="button">6</button>
+                <button class="btn" onclick="addOutput('5')" type="button">5</button>
+                <button class="btn" onclick="addOutput('4')" type="button">4</button>
+                <button class="btn" onclick="addOutput('*')" type="button">*</button>
+                <button class="btn" onclick="addOutput('/')" type="button">/</button>
+            </div>
+            <div class="buttonWerp">
+                <button class="btn" onclick="addOutput('3')" type="button">3</button>
+                <button class="btn" onclick="addOutput('2')" type="button">2</button>
+                <button class="btn" onclick="addOutput('1')" type="button">1</button>
+                <button class="btn" onclick="addOutput('+')" type="button">+</button>
+                <button class="btn" onclick="addOutput('-')" type="button">-</button>
+            </div>
+            <div class="buttonWerp">
+                <button class="btn" onclick="addOutput('00')" type="button">00</button>
+                <button class="btn" onclick="addOutput('.')" type="button">.</button>
+                <button class="btn" onclick="addOutput('0')" type="button">0</button>
+                <button class="btnEqal" onclick="calculate()" type="button">=</button>
+            </div>
+        </div>
     </div>
-    <div class="row">
-      <button id="num-4">4</button>
-      <button id="num-5">5</button>
-      <button id="num-6">6</button>
-      <button id="minus">-</button>
-    </div>
-    <div class="row">
-      <button id="num-1">1</button>
-      <button id="num-2">2</button>
-      <button id="num-3">3</button>
-      <button id="divide">/</button>
-    </div>
-    <div class="row">
-      <button id="clear">C</button>
-      <button id="num-0">0</button>
-      <button id="calculate">=</button>
-      <button id="multiply">x</button>
-    </div>
-  <script>
-    let numOne = '';
-    let operator = '';
-    let numTwo = '';
-    const $operator = document.querySelector('#operator');
-    const $result = document.querySelector('#result');
-    // document.querySelector('#num-0').addEventListener('click', () => {});
-    // document.querySelector('#num-1').addEventListener('click', () => {});
-    // document.querySelector('#num-2').addEventListener('click', () => {});
-    // document.querySelector('#num-3').addEventListener('click', () => {});
-    // document.querySelector('#num-4').addEventListener('click', () => {});
-    // document.querySelector('#num-5').addEventListener('click', () => {});
-    // document.querySelector('#num-6').addEventListener('click', () => {});
-    // document.querySelector('#num-7').addEventListener('click', () => {});
-    // document.querySelector('#num-8').addEventListener('click', () => {});
-    // document.querySelector('#num-9').addEventListener('click', () => {});
-    // document.querySelector('#plus').addEventListener('click', () => {});
-    // document.querySelector('#minus').addEventListener('click', () => {});
-    // document.querySelector('#divide').addEventListener('click', () => {});
-    // document.querySelector('#multiply').addEventListener('click', () => {});
-    // document.querySelector('#calculate').addEventListener('click', () => {});
-    // document.querySelector('#clear').addEventListener('click', () => {});
-
-    // document.querySelector('#num-0').addEventListener('click', () => {
-    //     if (operator) {
-    //         numTwo += '0';
-    //     } else {
-    //         numOne += '0';
-    //     }
-    //     $result.value += '0';
-    // });
-    //     document.querySelector('#num-1').addEventListener('click', () => {
-    //     if (operator) {
-    //         numTwo += '1';
-    //     } else {
-    //         numOne += '1';
-    //     }
-    //     $result.value += '1';
-    // });
-
-    const onClickNumber = (event) => {
-        // if (operator) {
-        // numTwo += event.target.textContent;
-        // } else {
-        // numOne += event.target.textContent;
-        // }
-        // $result.value += event.target.textContent;
-
-//         if (operator) {
-//     if (!numTwo) {
-//       $result.value = '';
-//     }
-//     numTwo += event.target.textContent;
-//     $result.value += event.target.textContent;
-//   } else {
-//     numOne += event.target.textContent;
-//     $result.value += event.target.textContent;
-//   }
-    const onClickNumber = (event) => {
-    if (!operator) {
-        numOne += event.target.textContent;
-        $result.value += event.target.textContent;
-        return;
-    }
-    // 이 아래로는 operator가 존재하는 경우에만 실행됨
-    if (!numTwo) {
-        $result.value = '';
-    }
-    numTwo += event.target.textContent;
-    $result.value += event.target.textContent;
-    };
-
-    };
-    document.querySelector('#num-0').addEventListener('click', onClickNumber);
-    document.querySelector('#num-1').addEventListener('click', onClickNumber);
-    document.querySelector('#num-2').addEventListener('click', onClickNumber);
-    document.querySelector('#num-3').addEventListener('click', onClickNumber);
-    document.querySelector('#num-4').addEventListener('click', onClickNumber);
-    document.querySelector('#num-5').addEventListener('click', onClickNumber);
-    document.querySelector('#num-6').addEventListener('click', onClickNumber);
-    document.querySelector('#num-7').addEventListener('click', onClickNumber);
-    document.querySelector('#num-8').addEventListener('click', onClickNumber);
-    document.querySelector('#num-9').addEventListener('click', onClickNumber);
-
-    const onClickOperator = (op) => () => {
-        if (numOne) {
-        operator = op;
-        $operator.value = op;
-        } else {
-        alert("숫자를 먼저 입력하세요.");
-        }
-    };
-    document.querySelector('#plus').addEventListener('click', onClickOperator('+'));
-    document.querySelector('#minus').addEventListener('click', onClickOperator('-'));
-    document.querySelector('#divide').addEventListener('click', onClickOperator('/'));
-    document.querySelector('#multiply').addEventListener('click', onClickOperator('*'));
-    document.querySelector('#calculate').addEventListener('click', () => {});
-    document.querySelector('#clear').addEventListener('click', () => {});
-  </script>
+    <script src="./js/script.js"></script>
 </body>
-
 </html>
