--- a/12/user/singup_form.html
+++ b/12/user/singup_form.html
@@ -53,33 +53,39 @@
                 </header>
                 <section class="login_center">
                     <form class="loginFormBox">
-                        <div class="uesr_inputTop1">
+                        <div class="user_inputTop1">
                             <label for="userId">아이디</label>
                             <button>아이디 중복체크</button>
                         </div>
                         <div class="userIdWrap">
                             <input name="userId" class="userIdBox" type="text" placeholder="아이디를 입력하세요">
                         </div>
-                        <div class="uesr_inputTop">
+                        <div class="user_inputTop">
                             <label for="userPw">비밀번호</label>
                         </div>
                         <div class="userPwWrap">
                             <input name="userPw" class="userPwBox" type="password" placeholder="비밀번호를 입력하세요">
                         </div>
-                        <div class="uesr_inputTop">
+                        <div class="user_inputTop">
                             <label for="userPwCheck">비밀번호 확인</label>
                         </div>
                         <div class="userPwCheckWrap">
                             <input name="userPwCheck" class="userPwCheckBox" type="password" placeholder="비밀번호를 다시 입력하세요">
                         </div>
-                        <div class="uesr_inputTop1">
+                        <div class="uesr_inputTop">
+                            <label for="userName">이름</label>
+                        </div>
+                        <div class="userNameWrap">
+                            <input name="userName" class="userNameBox" type="text" placeholder="이름 입력하세요">
+                        </div>
+                        <div class="user_inputTop1">
                             <label for="userPhen">휴대전화</label>
                             <button>인증하기</button>
                         </div>
-                        <div class="userPhen">
+                        <div class="userPhenWrap">
                             <input name="userPhen" class="userPhenBox" type="tel" placeholder="휴대전화번호를 입력하세요">
                         </div>
-                        <div class="uesr_inputTop">
+                        <div class="user_inputTop">
                             <label for="userEmail">이메일</label>
                         </div>
                         <div class="userEmailWrap">
