--- a/12/12Project-main/user/_view/login_form.html
+++ b/12/12Project-main/user/_view/login_form.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/QcyRTbG/wt.png">
     <title>12::로그인</title>
 </head>
-<body>
+<body> 
     <div class="loginPage">
         <!-- 로그인 페이지 Background  -->
         <div class="loginBg">
@@ -52,7 +52,7 @@
                     <h2>wt::12 로그인</h2>
                 </header>
                 <section class="login_center">
-                    <form class="loginFormBox">
+                    <form class="loginFormBox" action="log_in_ok.php" method="post">
                             <label for="userId">아이디</label>
                             <div class="userIdWrap">
                                 <input name="userId" class="userIdBox" type="text" placeholder="아이디를 입력하세요">
