--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -8,46 +8,123 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./stylesheet_oat.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="icon" type="image/x-icon" href="./img/oneandthree1text_icon.png">
     <title>1/3 OAT:oneandthree::하루3끼니 중 1끼니의 즐거움:)</title>
 </head>
 <body>
-    <header>
-        <div class="header_content">
-            <div class="header_contentTop">
-                <div class="mainlogo">
-                    <img src="./img/main.png" width="50%">
+        <div class="wrapTop" id="headerBg">
+            <header>
+                <div class="header_left">
+                    <img src="https://i.ibb.co/vXGVSc0/oneandthree1text.png" alt="oneandthree1text">
                 </div>
-                <div class="utilmeun">
-                    <a href="./oat_login.html">로그인</a>
-                    <a href="./oat_signup.html">회원가입</a>
-                    <a href="#"><img src="./img/oneandthree1text_icon.png"></a>
+                <div class="header_right">
+                    <ul class="header_rightList">
+                        <a><li>로그인</li></a>
+                        <a><li>회원가입</li></a>
+                    </ul>
                 </div>
-            </div>
-            <nav class="navbar">
-                <div>
-                    <ul>
-                        <li>메뉴소개</li>
+            </header>
+            <nav>
+                <ul class="menuberList">
+                    <li class="menuberList_li">
+                        <a>메뉴소개</a>
+                        <div class="menuberList_liCh">
                             <ul>
                                 <li>샌드위치</li>
-                                <li>랩 기타</li>
+                                <li>랩ㆍ기타</li>
                                 <li>샐러드</li>
                                 <li>아침메뉴</li>
-                                <li>스마일 1/3</li>
+                                <li>사이드</li>
                                 <li>단체메뉴</li>
                             </ul>
-                        <li>이용방법</li>
-                        <li>새소식</li>
-                        <li>1/3</li>
-                        <li>가맹점</li>
-                        <li>온라인주문</li>
-                    </ul>
+                        </div>
+                    </li>
+                    <li class="menuberList_li">
+                        <a>이용방법</a>
+                        <div class="menuberList_liCh">
+                            <ul>
+                                <li>원앤드쓰리 이용방법</li>
+                                <li>단체메뉴 이용방법</li>
+                                <li>신선한 재료 소개</li>
+                                <li>App 이용방법</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="menuberList_li">
+                        <a>새소식</a>
+                        <div class="menuberList_liCh">
+                            <ul>
+                                <li>이벤트ㆍ프로모션</li>
+                                <li>뉴스ㆍ공지사항</li>
+                                <li>광고영상</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="menuberList_li">
+                        <a>원앤드쓰리</a>
+                        <div class="menuberList_liCh">
+                            <ul>
+                                <li>원앤드쓰리 역사</li>
+                                <li>원앤드쓰리 약속</li>
+                                <li>샌드위치 아티스트 지원</li>
+                                <li>매장찾기</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="menuberList_li">
+                        <a>가맹점</a>
+                        <div class="menuberList_liCh">
+                            <ul>
+                                <li>원앤드쓰리 프랜차이즈</li>
+                                <li>가맹관련 FAQ</li>
+                                <li>가맹신청ㆍ문의</li>
+                                <li>지사안내</li>
+                                <li>사업설명회</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="menuberList_li">
+                        <a>온라인주문</a>
+                        <div class="menuberList_liCh">
+                            <ul>
+                                <li>원앤드쓰리 프랜차이즈</li>
+                                <li>가맹관련 FAQ</li>
+                                <li>가맹신청ㆍ문의</li>
+                                <li>지사안내</li>
+                                <li>사업설명회</li>
+                            </ul>
+                        </div>
+                    </li>
+                    
 
-                </div>
+                </ul>
             </nav>
-
         </div>
-    </header>
+        <div class="wrapCenter">
+            <main>
+
+            </main>
+            <section>
+
+            </section>
+            <section>
+    
+            </section>
+        </div>
+        <div class="wrapBottom">
+            <div>
+
+            </div>
+        </div>
+        <div class="wrapTopButton">
+            <div class="topBtn" id="topBtn">
+             탑버튼
+            </div>
+        </div>
+        <footer>
+
+        </footer>
+    <script src="./js/index_js.js"></script>
 </body>
 </html>
