--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -25,10 +25,17 @@
                     </ul>
                 </div>
             </header>
+            <div class="menu_btn">
+                <img src="https://i.ibb.co/51SZnqN/menu.png" alt="menu-open">
+            </div>
             <nav>
+                <div class="menuClose" >
+                    <img src="https://i.ibb.co/sWGYqm0/close.png" alt="menu_close">
+                </div>
+                
                 <ul class="menuberList">
                     <li class="menuberList_li">
-                        <a>메뉴소개</a>
+                        <a id="">메뉴소개</a>
                         <div class="menuberList_liCh">
                             <ul>
                                 <li>샌드위치</li>
@@ -41,7 +48,7 @@
                         </div>
                     </li>
                     <li class="menuberList_li">
-                        <a>이용방법</a>
+                        <a >이용방법</a>
                         <div class="menuberList_liCh">
                             <ul>
                                 <li>원앤드쓰리 이용방법</li>
