--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -43,7 +43,7 @@
                         <a><div class="menuSubCh"><img src="https://i.ibb.co/51SZnqN/menu.png" alt="menu-open">쿠폰</div></a>
                         <a><div class="menuSubCh"><img src="https://i.ibb.co/51SZnqN/menu.png" alt="menu-open">e-Gift</div></a>
                     </div>
-                    </div>
+                </div>
                     
                 <ul class="menuberList">
                     <li class="menuberList_li">
@@ -122,7 +122,27 @@
         </div>
         <div class="wrapCenter">
             <main>
-                dfsdfsfsdfs
+                <div class="main_banner_ImgWrap">
+                    <div class="main_banner_Imgbox">
+                        <a><img class="main_banner_Img" src="https://i.ibb.co/QDh4wMc/main-PC-1920x440-20201006040046969.jpg" alt="베너1"></a>
+                    </div>
+                    <div class="main_banner_ImgControl">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </div>
+                <div class="main_banner_quick">
+                    <div>
+                        <img src="https://i.ibb.co/sWGYqm0/close.png" alt="menu_close">
+                        <span>매장찾기</span>
+                    </div>
+                    <div>
+                        <img src="https://i.ibb.co/sWGYqm0/close.png" alt="menu_close">
+                        <span>가맹신청 ㆍ 문의</span>
+                    </div>
+                </div>
             </main>
             <section>
 
