--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -132,10 +132,10 @@
                         <a><img class="main_banner_Img" src="https://i.ibb.co/QDh4wMc/main-PC-1920x440-20201006040046969.jpg" alt="베너1"></a>
                     </div>
                     <div class="main_banner_ImgControl">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class="dot" onclick="currentSlide1()"></div>
+                        <div class="dot" onclick="currentSlide2()"></div>
+                        <div class="dot" onclick="currentSlide3()"></div>
+                        <div class="dot" onclick="currentSlide4()"></div>
                     </div>
                 </div>
                 <div class="main_banner_quick">
@@ -148,12 +148,14 @@
                         <span>가맹신청 ㆍ 문의</span>
                     </div>
                 </div>
-            </main>
+            </main> 
             <!-- OneAndThree's Menu -->
             <section>
                 <div class="main_menulistWrap">
                     <div class="main_menulist_top">
-                        <div class="main_ml_topLeft">OneAndThree's Menu</div>
+                        <div class="main_ml_topLeft">
+                            <h2>OneAndThree's Menu</h2>
+                        </div>
                         <div class="main_ml_topRight">
                             <ul>
                                 <a><li>클래식</li></a>
@@ -371,15 +373,45 @@
                             <div class="swiper-pagination"></div>
                         </div>
                     </div>
-
-
-                        
-                    </div>
                 </div>
-
             </section>
             <section>
-    
+                <div class="oat">
+                    <div class="oat_top">
+                        <div class="oat_HowToUse">
+                            <p>원앤쓰리를<br>재대로 즐기는 방법 !!</p>
+                            <p>이용하는 방법</p>
+                        </div>
+                        <div class="oat_history">
+                            <div>
+                                <img src="https://i.ibb.co/ZYYbGsT/main.png" alt="oneandthree main logo">
+                            </div>
+                            <div>
+                                <p>역사를 가진<br>No.1 프렌차이즈의 성장기</p>
+                                <p>원앤드쓰리 역사</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="oat_bottom">
+                        <div class="oat_news">
+                            <div class="board_head">
+                                <h2>What's New</h2>
+                                <p>써브웨이의 다양한 소식을<br>빠르게 전달해드립니다.</p>
+                            </div>
+                            <div class="board_list">
+                                <ul>
+                                    <li><a>써브웨이와 함께하는 SBS 금토드라마 '오늘의 웹툰'</a></li>
+                                    <li><a>미트볼 판매 종료 안내</a></li>
+                                    <li><a>써브웨이 제품 가격 인상 안내</a></li>    
+                                </ul>
+                                <a>more</a>
+                            </div>
+                        </div>
+                        <div class="oat_baner">
+                            <img src="https://i.ibb.co/nmH069Z/image.jpg" >
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
         <div class="wrapBottom">
