--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -129,7 +129,7 @@
             <main>
                 <div class="main_banner_ImgWrap">
                     <div class="main_banner_Imgbox">
-                        <a><img class="main_banner_Img" src="https://i.ibb.co/QDh4wMc/main-PC-1920x440-20201006040046969.jpg" alt="베너1"></a>
+                        <a><img class="main_banner_Img" src="./img/top_baner1_PC1920x440.png" alt="top-baner-1920x440"></a>
                     </div>
                     <div class="main_banner_ImgControl">
                         <div class="dot" onclick="currentSlide1()"></div>
