--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -384,7 +384,7 @@
                         </div>
                         <div class="oat_history">
                             <div>
-                                <img src="https://i.ibb.co/ZYYbGsT/main.png" alt="oneandthree main logo">
+                                <img src="" alt="oneandthree main logo">
                             </div>
                             <div>
                                 <p>역사를 가진<br>No.1 프렌차이즈의 성장기</p>
