--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -375,7 +375,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="oatWrap">
                 <div class="oat">
                     <div class="oat_top">
                         <div class="oat_HowToUse">
@@ -384,7 +384,7 @@
                         </div>
                         <div class="oat_history">
                             <div>
-                                <img src="" alt="oneandthree main logo">
+                                <img src="./img/main.png" alt="oneandthree main logo">
                             </div>
                             <div>
                                 <p>역사를 가진<br>No.1 프렌차이즈의 성장기</p>
@@ -396,7 +396,7 @@
                         <div class="oat_news">
                             <div class="board_head">
                                 <h2>What's New</h2>
-                                <p>써브웨이의 다양한 소식을<br>빠르게 전달해드립니다.</p>
+                                <p>원앤쓰리의 <br>다양한 소식을<br>빠르게 전달해드립니다.</p>
                             </div>
                             <div class="board_list">
                                 <ul>
@@ -407,7 +407,7 @@
                                 <a>more</a>
                             </div>
                         </div>
-                        <div class="oat_baner">
+                        <div class="oat_banner">
                             <img src="https://i.ibb.co/nmH069Z/image.jpg" >
                         </div>
                     </div>
