--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -416,17 +416,75 @@
             </section>
         </div>
         <div class="wrapBottom">
-            <div>
-
+            <div class="wrapBottom_ChWrap">
+                <a>
+                    <div class="wrapBottom_Ch">
+                        <img src="https://i.ibb.co/JkgJ3Nc/footer-c.png" alt="footer-franchise_icon"/>
+                        <div>
+                            <span>프랜차이즈</span>
+                            <span>개설절차/투자비용 정보</span>
+                        </div>
+                    </div>
+                </a>
+                <a>
+                    <div class="wrapBottom_Ch">
+                        <img src="https://i.ibb.co/52vXwfj/footer-mab.png" alt="footer-branchOffice_icon"/>
+                        <div>
+                            <span>지사안내</span>
+                            <span>수도권/지방 지사정보</span>
+                        </div>
+                    </div>
+                </a>
+                <a>
+                    <div class="wrapBottom_Ch">
+                        <img src="https://i.ibb.co/k2bp3sc/footer-y.png" alt="footer-advertisement_icon"/>
+                        <div>
+                            <span>광고영상</span>
+                            <span>TV광고/동영상</span>
+                        </div>
+                    </div>
+                </a>
+                <a>
+                    <div class="wrapBottom_Ch">
+                        <img src="https://i.ibb.co/1Rn5DFc/footer-q.png" alt="footer-inquiry_icon"/>
+                        <div>
+                            <span>고객문의</span>
+                            <span>자주하는 질문/1:1문의</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="wrapTopButton">
             <div class="topBtn" id="topBtn">
-             탑버튼
+                <span class="topBtn_triangle"></span>
+                <span class="topBtn_text">TOP</span>
             </div>
         </div>
         <footer>
-
+            <div class="footer_top">
+                <ul>
+                    <li>이용약관</li>
+                    <li>개인정보처리방침</li>
+                    <li>원쓰카드</li>
+                    <li>점주관리자</li>
+                    <li>OneAndThree Listens</li>
+                </ul>
+            </div>
+            <div class="footer_bottom">
+                <div>
+                    <ul>
+                        <li>대표이사 : 김다홍 &VerticalSeparator;</li>
+                        <li>부산광역시 해운대구 우2동 해운대로 407 신세계프라자 10층 &VerticalSeparator;</li> 
+                        <li>통신판매업신고번호 : 2020-부산해운대-0000 <a>사업자정보확인</a>&VerticalSeparator;</li>
+                        <li>대표이메일 : baabmaster@baab.net &VerticalSeparator; 고객센터 : 1544 - 1234</li>
+                    </ul>
+                </div>
+                <div>
+                    <img src="https://i.ibb.co/XX9KC0n/image.jpg" alt="OneAndThree_instagram_shortcuts">
+                    <img src="https://i.ibb.co/BL1RghR/image.png"  alt="OneAndThree_kakaoTalk_shortcuts">
+                </div>
+            </div>
         </footer>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
