--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -150,8 +150,22 @@
                     </div>
                 </div>
             </main> 
+            <!-- 모바일버전(width: 690px)시 block -->
+            <section class="section_MBvar">
+                <div class="section_MBvar_fastOAT">
+                    <h4>FAST-OAT</h4>
+                    <h5>매장 선주문</h5>
+                    <img src="https://i.ibb.co/CVWr5CK/order.png" alt="order_icon">
+                </div>
+                <span></span>
+                <div class="section_MBvar_homeOAT">
+                    <h4>HOME-OAT</h4>
+                    <h5>배달주문</h5>
+                    <img src="https://i.ibb.co/CVWr5CK/order.png" alt="order_icon">
+                </div>
+            </section>
             <!-- OneAndThree's Menu -->
-            <section>
+            <section class="section_main_menulist">
                 <div class="main_menulistWrap">
                     <div class="main_menulist_top">
                         <div class="main_ml_topLeft">
@@ -455,6 +469,7 @@
                 </a>
             </div>
         </div>
+
         <div class="wrapTopButton">
             <div class="topBtn" id="topBtn">
                 <span class="topBtn_triangle"></span>
@@ -476,7 +491,7 @@
                     <ul>
                         <li>대표이사 : 김다홍 &VerticalSeparator;</li>
                         <li>부산광역시 해운대구 우2동 해운대로 407 신세계프라자 10층 &VerticalSeparator;</li> 
-                        <li>통신판매업신고번호 : 2020-부산해운대-0000 <a>사업자정보확인</a>&VerticalSeparator;</li>
+                        <li>통신판매업신고번호 : 2020-부산해운대-0000 &VerticalSeparator;</li>
                         <li>대표이메일 : baabmaster@baab.net &VerticalSeparator; 고객센터 : 1544 - 1234</li>
                     </ul>
                 </div>
@@ -488,7 +503,9 @@
         </footer>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
     <script src="./js/index_js.js"></script>
+
     
 
 </body>
