--- a/oneandthree/index.html
+++ b/oneandthree/index.html
@@ -155,13 +155,13 @@
                 <div class="section_MBvar_fastOAT">
                     <h4>FAST-OAT</h4>
                     <h5>매장 선주문</h5>
-                    <img src="https://i.ibb.co/CVWr5CK/order.png" alt="order_icon">
+                    <img src="https://i.ibb.co/jZy2yXV/footer-fast-OAT.png" alt="footer-fast-OAT">
                 </div>
                 <span></span>
                 <div class="section_MBvar_homeOAT">
                     <h4>HOME-OAT</h4>
                     <h5>배달주문</h5>
-                    <img src="https://i.ibb.co/CVWr5CK/order.png" alt="order_icon">
+                    <img src="https://i.ibb.co/jZy2yXV/footer-fast-OAT.png" alt="footer-fast-OAT">
                 </div>
             </section>
             <!-- OneAndThree's Menu -->
